--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-mongodb://nBow:Angel247192@ds133875.mlab.com:33875/heroku_gz3lf0v8
+MONGODB_URI=mongodb://nBow:Angel247192@ds133875.mlab.com:33875/heroku_gz3lf0v8
